Address review comments: improve test assertions
- FileInvalidStartingPathTest: assert endpoint directory and fileName expression content
- FileProduceTempPrefixTest: use Path API, assert exactly 1 file created, check content
- CustomSchemaFactoryFeatureTest: verify same SchemaFactory instance via assertSame
- CamelContextDeadlockTest: revert to main (test is inherently fragile, needs rework)
- RouteMustHaveOutputOnExceptionTest: send message and verify mock:result is called
- AdviceWithTryCatchFinallyTest: verify mock:replaced is called, mock:replace-me is not

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>